@@ -13,6 +13,7 @@ import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.DefendantRespon
 import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.PossessionClaimResponse;
 import uk.gov.hmcts.reform.pcs.ccd.event.respondpossessionclaim.StartEventHandler;
 import uk.gov.hmcts.reform.pcs.ccd.event.respondpossessionclaim.SubmitEventHandler;
+import uk.gov.hmcts.reform.pcs.ccd.service.ClaimResponseService;
 import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
 import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 import uk.gov.hmcts.reform.pcs.ccd.entity.AddressEntity;
@@ -26,7 +27,6 @@ import uk.gov.hmcts.reform.pcs.ccd.service.PcsCaseService;
 import uk.gov.hmcts.reform.pcs.ccd.service.party.DefendantAccessValidator;
 import uk.gov.hmcts.reform.pcs.ccd.service.respondpossessionclaim.ImmutablePartyFieldValidator;
 import uk.gov.hmcts.reform.pcs.ccd.service.respondpossessionclaim.PossessionClaimResponseMapper;
-import uk.gov.hmcts.reform.pcs.ccd.util.AddressMapper;
 import uk.gov.hmcts.reform.pcs.exception.CaseAccessException;
 import uk.gov.hmcts.reform.pcs.security.SecurityContextService;
 
@@ -41,7 +41,6 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.mockito.ArgumentCaptor.forClass;
@@ -54,13 +53,13 @@ class RespondPossessionClaimTest extends BaseEventTest {
     private DraftCaseDataService draftCaseDataService;
 
     @Mock
+    private ClaimResponseService claimResponseService;
+
+    @Mock
     private PcsCaseService pcsCaseService;
 
     @Mock
     private SecurityContextService securityContextService;
-
-    @Mock
-    private AddressMapper addressMapper;
 
     @Mock
     private PossessionClaimResponseMapper responseMapper;
@@ -84,7 +83,8 @@ class RespondPossessionClaimTest extends BaseEventTest {
 
         SubmitEventHandler submitEventHandler = new SubmitEventHandler(
             draftCaseDataService,
-            immutableFieldValidator
+            immutableFieldValidator,
+            claimResponseService
         );
 
         setEventUnderTest(new RespondPossessionClaim(
@@ -304,7 +304,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
     }
 
     @Test
-    void shouldNotSaveDraftWhenSubmitDraftIsYes() {
+    void shouldSaveDraftWhenSubmitDraftIsYes() {
         PossessionClaimResponse possessionClaimResponse = PossessionClaimResponse.builder()
             .defendantContactDetails(DefendantContactDetails.builder()
                 .party(null)
@@ -319,7 +319,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
 
         callSubmitHandler(caseData);
 
-        verify(draftCaseDataService, never()).patchUnsubmittedEventData(
+        verify(draftCaseDataService).patchUnsubmittedEventData(
             eq(TEST_CASE_REFERENCE),
             any(PCSCase.class),
             eq(EventId.respondPossessionClaim)
@@ -361,7 +361,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
         callSubmitHandler(caseData);
 
         // Then: draft should be saved (null defaults to NO which means save draft)
-        verify(draftCaseDataService, times(1)).patchUnsubmittedEventData(
+        verify(draftCaseDataService).patchUnsubmittedEventData(
             eq(TEST_CASE_REFERENCE),
             any(),
             eq(EventId.respondPossessionClaim)
@@ -648,7 +648,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
 
         assertThat(response.getErrors()).isNotNull();
         assertThat(response.getErrors()).hasSize(1);
-        assertThat(response.getErrors().get(0)).isEqualTo("Invalid submission: missing response data");
+        assertThat(response.getErrors().getFirst()).isEqualTo("Invalid submission: missing response data");
 
         verify(draftCaseDataService, never()).patchUnsubmittedEventData(
             eq(TEST_CASE_REFERENCE),
@@ -676,7 +676,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
         // Then: should return error
         assertThat(response.getErrors()).isNotNull();
         assertThat(response.getErrors()).hasSize(1);
-        assertThat(response.getErrors().get(0))
+        assertThat(response.getErrors().getFirst())
             .isEqualTo("Invalid submission: no data to save");
 
         // And: should NOT save draft
@@ -733,7 +733,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
         assertThat(response.getErrors()).isNull();
 
         // And: draft should be saved via deep merge (preserves existing fields)
-        verify(draftCaseDataService, times(1)).patchUnsubmittedEventData(
+        verify(draftCaseDataService).patchUnsubmittedEventData(
             eq(TEST_CASE_REFERENCE),
             any(),
             eq(EventId.respondPossessionClaim)
@@ -776,7 +776,7 @@ class RespondPossessionClaimTest extends BaseEventTest {
 
         assertThat(response.getErrors()).isNotNull();
         assertThat(response.getErrors()).hasSize(1);
-        assertThat(response.getErrors().get(0))
+        assertThat(response.getErrors().getFirst())
             .isEqualTo("We couldn't save your response. Please try again or contact support.");
     }
 
