@@ -18,11 +18,14 @@ import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.DefendantContac
 import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.DefendantResponses;
 import uk.gov.hmcts.reform.pcs.ccd.domain.respondpossessionclaim.PossessionClaimResponse;
 import uk.gov.hmcts.reform.pcs.ccd.domain.State;
+import uk.gov.hmcts.reform.pcs.ccd.event.EventId;
+import uk.gov.hmcts.reform.pcs.ccd.service.ClaimResponseService;
 import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 import uk.gov.hmcts.reform.pcs.ccd.service.DraftCaseDataService;
 import uk.gov.hmcts.reform.pcs.ccd.service.respondpossessionclaim.ImmutablePartyFieldValidator;
 
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -44,6 +47,8 @@ class SubmitEventHandlerTest {
     private ImmutablePartyFieldValidator immutableFieldValidator;
     @Mock
     private EventPayload<PCSCase, State> eventPayload;
+    @Mock
+    ClaimResponseService claimResponseService;
 
     @Captor
     private ArgumentCaptor<PCSCase> pcsCaseCaptor;
@@ -52,7 +57,9 @@ class SubmitEventHandlerTest {
 
     @BeforeEach
     void setUp() {
-        underTest = new SubmitEventHandler(draftCaseDataService, immutableFieldValidator);
+        underTest =
+            new SubmitEventHandler(draftCaseDataService,
+                immutableFieldValidator, claimResponseService);
     }
 
     // ========== DRAFT SAVE FLOW (submitDraftAnswers = NO) ==========
@@ -109,6 +116,7 @@ class SubmitEventHandlerTest {
     // ========== FINAL SUBMIT FLOW (submitDraftAnswers = YES) ==========
 
     @Test
+
     void shouldNotSaveDraftWhenSubmitFlagIsYes() {
         // Given
         Party party = Party.builder()
@@ -133,13 +141,15 @@ class SubmitEventHandlerTest {
         EventPayload<PCSCase, State> payload = createEventPayload(caseData);
 
         // When
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
         SubmitResponse<State> result = underTest.submit(payload);
 
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getErrors()).isNullOrEmpty();
 
-        verify(draftCaseDataService, never()).patchUnsubmittedEventData(
+        verify(draftCaseDataService).patchUnsubmittedEventData(
             eq(CASE_REFERENCE), any(PCSCase.class), eq(respondPossessionClaim)
         );
     }
@@ -173,13 +183,16 @@ class SubmitEventHandlerTest {
         EventPayload<PCSCase, State> payload = createEventPayload(caseData);
 
         // When
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
+
         SubmitResponse<State> result = underTest.submit(payload);
 
         // Then
         assertThat(result).isNotNull();
         assertThat(result.getErrors()).isNullOrEmpty();
 
-        verify(draftCaseDataService, never()).patchUnsubmittedEventData(
+        verify(draftCaseDataService).patchUnsubmittedEventData(
             eq(CASE_REFERENCE), any(PCSCase.class), eq(respondPossessionClaim)
         );
     }
@@ -203,7 +216,7 @@ class SubmitEventHandlerTest {
         assertThat(result).isNotNull();
         assertThat(result.getErrors()).isNotNull();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0)).isEqualTo("Invalid submission: missing response data");
+        assertThat(result.getErrors().getFirst()).isEqualTo("Invalid submission: missing response data");
 
         verify(draftCaseDataService, never()).patchUnsubmittedEventData(
             eq(CASE_REFERENCE), any(PCSCase.class), eq(respondPossessionClaim)
@@ -269,7 +282,7 @@ class SubmitEventHandlerTest {
             .as("Must return error when both fields are null")
             .isNotNull()
             .hasSize(1);
-        assertThat(result.getErrors().get(0))
+        assertThat(result.getErrors().getFirst())
             .as("Error message should indicate no data to save")
             .isEqualTo("Invalid submission: no data to save");
 
@@ -657,7 +670,7 @@ class SubmitEventHandlerTest {
         assertThat(result).isNotNull();
         assertThat(result.getErrors()).isNotNull();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0))
+        assertThat(result.getErrors().getFirst())
             .isEqualTo("We couldn't save your response. Please try again or contact support.");
     }
 
@@ -759,6 +772,300 @@ class SubmitEventHandlerTest {
             .isEqualTo("07700900000");
         assertThat(savedContactDetails.getParty().getAddress()).isEqualTo(address);
         // Note: submitDraftAnswers is NOT persisted to draft - it's a transient UI flag
+    }
+
+    @Test
+    void shouldSaveContactPreferencesWhenSubmitDraftAnswersIsYes() {
+        // Given
+        Party party = Party.builder()
+            .firstName("John")
+            .lastName("Doe")
+            .phoneNumber("07123456789")
+            .emailAddress("john@example.com")
+            .address(AddressUK.builder().build())
+            .build();
+
+        DefendantContactDetails defendantContactDetails =
+            DefendantContactDetails.builder()
+                .party(party)
+                .build();
+
+        PossessionClaimResponse response = PossessionClaimResponse.builder()
+            .defendantContactDetails(defendantContactDetails)
+            .build();
+
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(response)
+            .submitDraftAnswers(YesOrNo.YES)
+            .build();
+
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        // When
+        SubmitResponse<State> result = underTest.submit(eventPayload);
+
+        // Then
+        assertThat(result).isNotNull();
+        assertThat(result.getErrors()).isNullOrEmpty();
+
+        // Verify contact preferences service was called
+        verify(claimResponseService).saveDraftData(response);
+
+        // Verify draft service was called once
+        verify(draftCaseDataService)
+            .patchUnsubmittedEventData(eq(CASE_REFERENCE),
+                any(),
+                eq(EventId.respondPossessionClaim));
+    }
+
+    @Test
+    void shouldNotSaveContactPreferencesWhenSubmitDraftAnswersIsNo() {
+        // Given
+        Party party = Party.builder()
+            .firstName("John")
+            .lastName("Doe")
+            .phoneNumber("07123456789")
+            .emailAddress("john@example.com")
+            .address(AddressUK.builder().build())
+            .build();
+
+        DefendantContactDetails defendantContactDetails =
+            DefendantContactDetails.builder()
+            .party(party)
+            .build();
+
+        PossessionClaimResponse response = PossessionClaimResponse.builder()
+            .defendantContactDetails(defendantContactDetails)
+            .build();
+
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(response)
+            .submitDraftAnswers(YesOrNo.NO)
+            .build();
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        // When
+        SubmitResponse<State> result = underTest.submit(eventPayload);
+
+        // Then
+        assertThat(result).isNotNull();
+        assertThat(result.getErrors()).isNullOrEmpty();
+
+        // Verify contact preferences service was NOT called
+        verify(claimResponseService, never()).saveDraftData(any(PossessionClaimResponse.class));
+
+        // Verify draft service was called once
+        verify(draftCaseDataService)
+            .patchUnsubmittedEventData(eq(CASE_REFERENCE), any(), eq(respondPossessionClaim));
+    }
+
+    @Test
+    void shouldSaveAllContactPreferenceFieldsWhenFinalSubmit() {
+        // Given - All contact preference fields populated
+        AddressUK address = AddressUK.builder().addressLine1("123 Test Street").build();
+
+        Party party = Party.builder()
+            .firstName("Jane")
+            .lastName("Smith")
+            .phoneNumber("07987654321")
+            .emailAddress("jane.smith@example.com")
+            .address(address)
+            .build();
+
+        DefendantContactDetails defendantContactDetails =
+            DefendantContactDetails.builder()
+                .party(party)
+                .build();
+
+        DefendantResponses defendantResponses =
+            DefendantResponses.builder()
+                .contactByEmail(VerticalYesNo.NO)
+                .contactByText(VerticalYesNo.YES)
+                .contactByPost(VerticalYesNo.NO)
+                .contactByPhone(VerticalYesNo.YES)
+                .build();
+
+        PossessionClaimResponse response = PossessionClaimResponse.builder()
+            .defendantContactDetails(defendantContactDetails)
+            .defendantResponses(defendantResponses)
+            .build();
+
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(response)
+            .submitDraftAnswers(YesOrNo.YES)
+            .build();
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        // When
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
+        SubmitResponse<State> result = underTest.submit(eventPayload);
+
+        // Then
+        assertThat(result).isNotNull();
+        assertThat(result.getErrors()).isNullOrEmpty();
+
+        // Verify the exact response object is passed to the service
+        ArgumentCaptor<PossessionClaimResponse> responseCaptor =
+            ArgumentCaptor.forClass(PossessionClaimResponse.class);
+        verify(claimResponseService).saveDraftData(responseCaptor.capture());
+
+        PossessionClaimResponse capturedResponse = responseCaptor.getValue();
+        assertThat(capturedResponse.getDefendantResponses().getContactByEmail()).isEqualTo(VerticalYesNo.NO);
+        assertThat(capturedResponse.getDefendantResponses().getContactByText()).isEqualTo(VerticalYesNo.YES);
+        assertThat(capturedResponse.getDefendantResponses().getContactByPost()).isEqualTo(VerticalYesNo.NO);
+        assertThat(capturedResponse.getDefendantResponses().getContactByPhone()).isEqualTo(VerticalYesNo.YES);
+        assertThat(capturedResponse.getDefendantContactDetails().getParty().getPhoneNumber())
+            .isEqualTo("07987654321");
+        assertThat(capturedResponse.getDefendantContactDetails().getParty().getEmailAddress())
+            .isEqualTo("jane.smith@example.com");
+        assertThat(capturedResponse.getDefendantContactDetails().getParty().getAddress().getAddressLine1())
+            .isEqualTo("123 Test Street");
+    }
+
+    @Test
+    void shouldHandleContactPreferencesWithNullValues() {
+        // Given - Some null preferences
+
+        DefendantResponses defendantResponses =
+            DefendantResponses.builder()
+                .contactByEmail(null)
+                .contactByText(VerticalYesNo.YES)
+                .contactByPost(null)
+                .contactByPhone(VerticalYesNo.YES)
+                .build();
+
+        PossessionClaimResponse response = PossessionClaimResponse.builder()
+            .defendantResponses(defendantResponses)
+            .build();
+
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(response)
+            .submitDraftAnswers(YesOrNo.YES)
+            .build();
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        // When
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
+
+        SubmitResponse<State> result = underTest.submit(eventPayload);
+
+        // Then
+        assertThat(result).isNotNull();
+        assertThat(result.getErrors()).isNullOrEmpty();
+
+        // Verify service handles null values gracefully
+        verify(claimResponseService).saveDraftData(response);
+    }
+
+    @Test
+    void shouldHandleExceptionFromContactPreferencesService() {
+        // Given
+        Party party = Party.builder()
+            .firstName("Test")
+            .lastName("User")
+            .build();
+
+        DefendantContactDetails defendantContactDetails = DefendantContactDetails.builder()
+            .party(party).build();
+
+        DefendantResponses defendantResponses = DefendantResponses.builder()
+            .contactByPhone(VerticalYesNo.YES)
+            .build();
+
+        PossessionClaimResponse response = PossessionClaimResponse.builder()
+            .defendantContactDetails(defendantContactDetails)
+            .defendantResponses(defendantResponses)
+            .build();
+
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(response)
+            .submitDraftAnswers(YesOrNo.YES)
+            .build();
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        //when
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
+
+        // Mock service to throw exception
+        doThrow(new IllegalStateException("No party found for IDAM ID"))
+            .when(claimResponseService).saveDraftData(any());
+
+        // When / Then - Exception should propagate (not caught by handler)
+        // This tests that the handler doesn't swallow exceptions
+        assertThat(org.junit.jupiter.api.Assertions.assertThrows(
+            IllegalStateException.class,
+            () -> underTest.submit(eventPayload)
+        )).hasMessage("No party found for IDAM ID");
+
+        verify(claimResponseService).saveDraftData(response);
+    }
+
+    @Test
+    void shouldCallContactPreferencesServiceBeforeReturningSuccess() {
+        // Given
+        Party party = Party.builder()
+            .firstName("Test")
+            .lastName("User")
+            .build();
+
+        DefendantContactDetails defendantContactDetails = DefendantContactDetails.builder()
+            .party(party).build();
+
+        DefendantResponses defendantResponses = DefendantResponses.builder()
+            .contactByPhone(VerticalYesNo.YES)
+            .build();
+
+        PossessionClaimResponse response = PossessionClaimResponse.builder()
+            .defendantContactDetails(defendantContactDetails)
+            .defendantResponses(defendantResponses)
+            .build();
+
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(response)
+            .submitDraftAnswers(YesOrNo.YES)
+            .build();
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        when(draftCaseDataService.getUnsubmittedCaseData(CASE_REFERENCE, respondPossessionClaim))
+            .thenReturn(Optional.of(caseData));
+
+        // When
+        SubmitResponse<State> result = underTest.submit(eventPayload);
+
+        // Then - Verify service is called and success is returned
+        verify(claimResponseService).saveDraftData(response);
+        assertThat(result).isNotNull();
+        assertThat(result.getErrors()).isNullOrEmpty();
+        assertThat(result.getState()).isNull(); // Default response has null state
+    }
+
+    @Test
+    void shouldNotCallContactPreferencesServiceWhenValidationFails() {
+        // Given - Missing possessionClaimResponse
+        PCSCase caseData = PCSCase.builder()
+            .possessionClaimResponse(null)  // Will fail validation
+            .submitDraftAnswers(YesOrNo.YES)
+            .build();
+
+        EventPayload<PCSCase, State> eventPayload = createEventPayload(caseData);
+
+        // When
+        SubmitResponse<State> result = underTest.submit(eventPayload);
+
+        // Then - Service should NOT be called due to validation failure
+        verify(claimResponseService, never()).saveDraftData(any());
+        assertThat(result.getErrors()).isNotEmpty();
     }
 
     private EventPayload<PCSCase, State> createEventPayload(PCSCase caseData) {
